E_CLASSROOM-372 [Bugfix] Card size in view quiz result is too small

--- a/src/pages/student/quizzes/QuizResult/QuizAnswerResult/indexAnswer.module.scss
+++ b/src/pages/student/quizzes/QuizResult/QuizAnswerResult/indexAnswer.module.scss
@@ -1,7 +1,7 @@
 @use '../../../../../styles/variables' as *;
 
 .card {
-  width: 500px;
+  width: 800px;
   margin-top: 130px;
 }
 
@@ -32,7 +32,7 @@
 
 .cardBody {
   padding: 30px 50px;
-  width: 500px;
+  width: 800px;
 }
 
 .scoreDisplay {
